--- a/services.html
+++ b/services.html
@@ -15,7 +15,7 @@ color:black;}
 <li><b>Infrastructure as a Service (IaaS)</b></li>
 </ul>
 <p>Different business use some or all of these components according to their requirement.</p>
-<img src="\cloud_computing_4.jpg">
+<img src="cloud_computing_4.jpg">
 <p><h3>SaaS (Software as a Service)</h3>
 SaaS or software as a service is a software distribution model in which applications are hosted by a vendor or service provider and made available to customers over a network (internet). SaaS is becoming an increasingly prevalent delivery model as underlying technologies that supports Service Oriented Architecture (SOA) or Web Services. Through internet this service is available to users anywhere in the world.<br><br> </p>
 <p><h3>PaaS (Platform as a Service)</h3>
