--- a/home.html
+++ b/home.html
@@ -10,7 +10,7 @@ color:#33E0FF;}
 <h2>Cloud Computing Definition</h2>
 <p>Cloud Computing can be defined as delivering computing power( CPU, RAM, Network Speeds, Storage OS software) a service over a network (usually on the internet) rather than physically having the computing resources at the customer location.</p>
 <p><b>Example:</b>AWS, Azure, Google Cloud</p><br>
-<img src="https://github.com/javali444/website/blob/master/cloud_computing_1.jpg" align="center">
+<img src="cloud_computing_1.jpg" align="center">
 <p>Let’s learn Cloud computing with an example -</p>
 <p>Whenever you travel through a bus or train, you take a ticket for your destination and hold back to your seat till you reach your destination. Likewise other passengers also takes ticket and travel in the same bus with you and it hardly bothers you where they go. When your stop comes you get off the bus thanking the driver. Cloud computing is just like that bus, carrying data and information for different users and allows to use its service with minimal cost.</p>
 <p><b>Topics:</b></p>
