--- a/types.html
+++ b/types.html
@@ -9,7 +9,7 @@ color:#33E0FF;}
 <body style="font-size:20px;">
 <h2>Types of Clouds</h2>
 <p>There are four different cloud models that you can subscribe according to business needs:</p>
-<img src="C:\Users\user\Desktop\cloud_computing_3.jpg">
+<img src="cloud_computing_3.jpg">
 <p>1.<b>Private Cloud:</b> Here, computing resources are deployed for one particular organization.  This method is more used for intra-business interactions.  Where the computing resources can be governed, owned and operated by the same organization.<br><br>
 2.<b>Community Cloud:</b> Here, computing resources are provided for a community and organizations. <br><br>
 3.<b>Public Cloud:</b> This type of cloud is used usually for B2C (Business to Consumer) type interactions.  Here the computing resource is owned, governed and operated by government, an academic or business organization. <br><br>
